# python-matplotlib-to-originlab

./: AI_CONTEXT.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
client/: README.md  pyproject.toml
client/matplotlib_to_origin/: __init__.py
client/matplotlib_to_originlab/: __init__.py
core/: README.md  pyproject.toml
core/matplotlib_to_origin_core/: __init__.py
core/matplotlib_to_originlab_core/: __init__.py
remote/: README.md  pyproject.toml
remote/matplotlib_to_origin_remote/: __init__.py
remote/matplotlib_to_originlab_remote/: __init__.py
server/: README.md  pyproject.toml
server/matplotlib_to_origin_server/: __init__.py  __main__.py  app.py
server/matplotlib_to_originlab_server/: __init__.py  __main__.py  app.py
tests/: test_py2origin.py
