# Monorepo root — not an installable package.
# Each sub-package has its own pyproject.toml:
#
#   core/    → matplotlib-to-origin-core   (local execution engine, Windows + Origin)
#   client/  → matplotlib-to-origin        (user-facing client, all platforms)
#   remote/  → matplotlib-to-origin-remote (HTTP client)
#   server/  → matplotlib-to-origin-server (Origin execution node, Windows)
#
# To work on a specific package:
#   cd core && poetry install
#   cd client && poetry install
#   etc.

[tool.poetry]
name = "matplotlib-to-origin-monorepo"
version = "0.1.0"
description = "Monorepo root for the matplotlib-to-origin ecosystem"
authors = ["y-marui"]
readme = "README.md"
license = "MIT"
# No packages field — this is not an installable package itself.

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
autopep8 = "^2.0.1"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
