[tool.poetry]
name = "matplotlib-to-origin-remote"
version = "0.1.0"
description = "HTTP client for matplotlib-to-origin-server — cross-platform"
authors = ["y-marui"]
readme = "README.md"
license = "MIT"
packages = [{include = "matplotlib_to_origin_remote"}]

# All OS (Windows, macOS, Linux).
# Used by matplotlib-to-origin when OriginLab is not available locally.

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
