[tool.poetry]
name = "matplotlib-to-origin-server"
version = "0.1.0"
description = "Origin execution node — receives plot jobs from matplotlib-to-origin clients"
authors = ["y-marui"]
readme = "README.md"
license = "MIT"
packages = [{include = "matplotlib_to_origin_server"}]

# Install on the machine that has OriginLab:
#   pip install matplotlib-to-origin-server
#
# Windows + OriginLab required.

[tool.poetry.dependencies]
python = "^3.10"
matplotlib-to-origin-core = {path = "../core"}
# Web framework (planned — see ROADMAP.md)
fastapi = {version = "^0.100.0", optional = true}
uvicorn = {version = "^0.23.0", optional = true}

[tool.poetry.extras]
server = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
matplotlib-to-origin-server = "matplotlib_to_origin_server.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
